--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -1,8 +1,9 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
+#ProcessorAffinity=3
 serverid=4080284420030544738
 MaxNumberOfPlayers=5000
-UseEncryption=true
+UseEncryption=false
 UseEncryptionForAll=false
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
@@ -58,7 +59,7 @@ LevelDBWorldFolder=C:\Users\nicke_000\AppData\Local\Temp\My World.mcworld
 #PCWorldFolder=C:\Downloads\broken_lobby\lobby
 
 # DEVELOPMENT
-PCWorldFolder=C:\Development\DOES NOT EXIST
+#PCWorldFolder=C:\Development\DOES NOT EXIST
 
 #Save.Enabled=true
 #Save.Interval=30
@@ -80,7 +81,7 @@ PCWorldFolder=C:\Development\DOES NOT EXIST
 
 # Cool worlds for testing
 #PCWorldFolder=C:\Development\Worlds\Waka_Islands_2_v0.4\WAKA ISLANDS 2 - V0.4
-#PCWorldFolder=C:\Development\Worlds\TerrainControlGenerated
+PCWorldFolder=C:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=C:\Temp\UHCr1000
 #PCWorldFolder=C:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=C:\Downloads\KingsLanding1\KingsLanding1
@@ -108,13 +109,13 @@ EnableCommands=true
 PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp3.1;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp3.1;../../../../MiNET.Plotter/bin/Debug/netcoreapp3.1
 #PluginDirectory=C:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug\netcoreapp3.1;
 
-PluginDisabled=true
+#PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 #CommandsTest.Enabled=false
 SurvivalCraft.Enabled=false
 Plotter.Enabled=false
-BuilderBase.Enabled=false
+#BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
