Go to sleep. Wake up, go to toilet. Push!

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -3,8 +3,8 @@
 #ProcessorAffinity=3
 serverid=4080284420030544738
 MaxNumberOfPlayers=5000
-UseEncryption=false
-UseEncryptionForAll=false
+UseEncryption=true
+UseEncryptionForAll=true
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
 ServerInfoInTitle=false
