New RakNet implementation for both server and client. Client now can use full RakNet functionality to provide much more stable experience in 3rd party clients using it. ServiceKiller and other users of the client is now broken, and needs to be adjusted to work with this.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -59,7 +59,7 @@ LevelDBWorldFolder=C:\Users\nicke_000\AppData\Local\Temp\My World.mcworld
 #PCWorldFolder=C:\Downloads\broken_lobby\lobby
 
 # DEVELOPMENT
-#PCWorldFolder=C:\Development\DOES NOT EXIST
+PCWorldFolder=C:\Development\DOES NOT EXIST
 
 #Save.Enabled=true
 #Save.Interval=30
@@ -81,7 +81,7 @@ LevelDBWorldFolder=C:\Users\nicke_000\AppData\Local\Temp\My World.mcworld
 
 # Cool worlds for testing
 #PCWorldFolder=C:\Development\Worlds\Waka_Islands_2_v0.4\WAKA ISLANDS 2 - V0.4
-PCWorldFolder=C:\Development\Worlds\TerrainControlGenerated
+#PCWorldFolder=C:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=C:\Temp\UHCr1000
 #PCWorldFolder=C:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=C:\Downloads\KingsLanding1\KingsLanding1
