Correct MTU calculations (actually know wtf you doing). Calculate split-size based on proper calculations of MTU and headers. Open up connection to custom MTU size to allow for Alex to do path MTU when connecting.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -36,7 +36,7 @@ EnableBlockTicking=false
 EnableChunkTicking=false
 GameRule.DoMobspawning=false
 GameRule.KeepInventory=true
-GameRule.DoDaylightcycle=true
+GameRule.DoDaylightcycle=false
 
 
 #Pathfinder.PrintPath=true
@@ -105,14 +105,14 @@ PCWorldFolder=C:\Development\DOES NOT EXIST
 
 EnableCommands=true
 
-#PluginDirectory=../../../../TestPlugin/bin/Release/netcoreapp3.1;
 PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp3.1;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp3.1;../../../../MiNET.Plotter/bin/Debug/netcoreapp3.1
+#PluginDirectory=../../../../TestPlugin/bin/Release/netcoreapp3.1;../../../../MiNET.BuilderBase/bin/Release/netcoreapp3.1;../../../../MiNET.Plotter/bin/Release/netcoreapp3.1
 #PluginDirectory=C:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug\netcoreapp3.1;
 
 #PluginDisabled=true
 #NiceLobby.Enabled=false
-#CoreCommands.Enabled=false
-#CommandsTest.Enabled=false
+CoreCommands.Enabled=false
+CommandsTest.Enabled=false
 SurvivalCraft.Enabled=false
 Plotter.Enabled=false
 #BuilderBase.Enabled=false
