--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ csharp_preferred_modifier_order=public, private, protected, internal, new, abstr
 csharp_style_var_elsewhere=false:none
 csharp_style_var_for_built_in_types=false:suggestion
 dotnet_naming_rule.constants_rule.severity=warning
-dotnet_naming_rule.constants_rule.style=all_upper_style
+dotnet_naming_rule.constants_rule.style=upper_camel_case_style
 dotnet_naming_rule.constants_rule.symbols=constants_symbols
 dotnet_naming_rule.public_fields_rule.severity=warning
 dotnet_naming_rule.public_fields_rule.style=upper_camel_case_style
