Fix config logging at startup.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -19,8 +19,8 @@ WorldProvider=anvil
 #WorldProvider=leveldb
 #UserBedrockGenerator=true
 
-ViewDistance=11
-MaxViewDistance=11
+ViewDistance=20
+MaxViewDistance=20
 MoveRenderDistance=1
 CalculateLights=false
 #UseAlexChunks=true
@@ -69,10 +69,10 @@ PCWorldFolder=C:\Development\DOES NOT EXIST
 #PCWorldFolder=C:\Temp\TestSave
 
 # Plotter
-#PCWorldFolder=C:\Temp\PlotterWorld
-#Save.Enabled=true
-#Save.Interval=30
-#Unload.Interval=10
+PCWorldFolder=C:\Temp\PlotterWorld
+Save.Enabled=true
+Save.Interval=30
+Unload.Interval=10
 
 # UHC maps
 #PCWorldFolder=C:\Development\Worlds\InPVP UHC Vanilla\Vanilla
@@ -105,16 +105,15 @@ PCWorldFolder=C:\Development\DOES NOT EXIST
 
 EnableCommands=true
 
-PluginDirectory=../../../../TestPlugin/bin/Debug/netcoreapp3.1;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp3.1;../../../../MiNET.Plotter/bin/Debug/netcoreapp3.1
-#PluginDirectory=../../../../TestPlugin/bin/Release/netcoreapp3.1;../../../../MiNET.BuilderBase/bin/Release/netcoreapp3.1;../../../../MiNET.Plotter/bin/Release/netcoreapp3.1
-#PluginDirectory=C:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug\netcoreapp3.1;
+PluginDirectory=../../../../TestPlugin/bin/{configuration}/netcoreapp3.1;../../../../MiNET.BuilderBase/bin/{configuration}/netcoreapp3.1;../../../../MiNET.Plotter/bin/{configuration}/netcoreapp3.1
+#PluginDirectory=C:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\{configuration}\netcoreapp3.1;
 
 #PluginDisabled=true
 #NiceLobby.Enabled=false
 CoreCommands.Enabled=false
 CommandsTest.Enabled=false
 SurvivalCraft.Enabled=false
-Plotter.Enabled=false
+#Plotter.Enabled=false
 #BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
