Send multiple messages in each datagram. Much better packing and memory management. Much less sends and much less handling of ACKs.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -69,10 +69,10 @@ PCWorldFolder=C:\Development\DOES NOT EXIST
 #PCWorldFolder=C:\Temp\TestSave
 
 # Plotter
-PCWorldFolder=C:\Temp\PlotterWorld
-Save.Enabled=true
-Save.Interval=30
-Unload.Interval=10
+#PCWorldFolder=C:\Temp\PlotterWorld
+#Save.Enabled=true
+#Save.Interval=30
+#Unload.Interval=10
 
 # UHC maps
 #PCWorldFolder=C:\Development\Worlds\InPVP UHC Vanilla\Vanilla
@@ -113,7 +113,7 @@ PluginDirectory=../../../../TestPlugin/bin/{configuration}/netcoreapp3.1;../../.
 CoreCommands.Enabled=false
 CommandsTest.Enabled=false
 SurvivalCraft.Enabled=false
-#Plotter.Enabled=false
+Plotter.Enabled=false
 #BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
