LevelDB for 1.14 working for reading.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -43,7 +43,7 @@ GameRule.DoDaylightcycle=false
 #Profiler.Enabled=true
 
 #LevelDB TEST
-LevelDBWorldFolder=C:\Users\nicke_000\AppData\Local\Temp\My World.mcworld
+LevelDBWorldFolder=C:\Development\Other\bedrock-server-1.14.1.4\worlds\BedrockGeneratedLevel
 
 # Bad light worlds
 #PCWorldFolder=C:\Development\Worlds\SkyWarsBrokenLight\SkyWars
@@ -110,7 +110,7 @@ PluginDirectory=../../../../TestPlugin/bin/{configuration}/netcoreapp3.1;../../.
 
 #PluginDisabled=true
 #NiceLobby.Enabled=false
-CoreCommands.Enabled=false
+#CoreCommands.Enabled=false
 CommandsTest.Enabled=false
 SurvivalCraft.Enabled=false
 Plotter.Enabled=false
