--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -109,12 +109,12 @@ PluginDirectory=../../../../TestPlugin/bin/{configuration}/netcoreapp3.1;../../.
 #PluginDirectory=C:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\{configuration}\netcoreapp3.1;
 
 #PluginDisabled=true
-#NiceLobby.Enabled=false
-#CoreCommands.Enabled=false
+NiceLobby.Enabled=false
+CoreCommands.Enabled=false
 CommandsTest.Enabled=false
 SurvivalCraft.Enabled=false
 Plotter.Enabled=false
-#BuilderBase.Enabled=false
+BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
@@ -130,7 +130,7 @@ TracePackets.Verbosity.McpeAddItemEntity=0
 TracePackets.Verbosity.McpeAddPlayer=0
 TracePackets.Verbosity.McpePlayerList=0
 TracePackets.Verbosity.McpeAnimate=0
-TracePackets.Verbosity.McpeInteract=0
+TracePackets.Verbosity.McpeInteract=1
 TracePackets.Verbosity.McpeMobArmorEquipment=0
 TracePackets.Verbosity.McpeUseItem=0
 TracePackets.Verbosity.McpeResourcePackDataInfo=0
@@ -140,7 +140,6 @@ TracePackets.Verbosity.McpePlayerAction=0
 TracePackets.Verbosity.McpeInventoryTransaction=1
 TracePackets.Verbosity.McpePlayerHotbar=0
 TracePackets.Verbosity.McpeInventoryContent=0
-TracePackets.Verbosity.McpeInventoryTransaction=0
 TracePackets.Verbosity.McpeCommandRequest=0
 TracePackets.Verbosity.McpeModalFormResponse=0
 TracePackets.Verbosity.McpeContainerClose=0
@@ -151,6 +150,5 @@ TracePackets.Verbosity.McpeStartGame=0
 TracePackets.Verbosity.McpeAvailableCommands=0
 TracePackets.Verbosity.McpeCraftingData=0
 TracePackets.Verbosity.McpeLevelSoundEvent=1
-
-
-
+TracePackets.Verbosity.McpeItemStackRequest=1
+TracePackets.Verbosity.McpeItemStackResponse=1
