More 1.16 inventory. Anvil and crafting working.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -109,8 +109,8 @@ PluginDirectory=../../../../TestPlugin/bin/{configuration}/netcoreapp3.1;../../.
 #PluginDirectory=C:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\{configuration}\netcoreapp3.1;
 
 #PluginDisabled=true
-NiceLobby.Enabled=false
-CoreCommands.Enabled=false
+#NiceLobby.Enabled=false
+#CoreCommands.Enabled=false
 CommandsTest.Enabled=false
 SurvivalCraft.Enabled=false
 Plotter.Enabled=false
