Refactor inventory transactions. Enchnting mechanics for selecting random enchants pretty much threre. Now need to work on checking shelves, levels (XP) etc.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -152,3 +152,4 @@ TracePackets.Verbosity.McpeCraftingData=0
 TracePackets.Verbosity.McpeLevelSoundEvent=1
 TracePackets.Verbosity.McpeItemStackRequest=1
 TracePackets.Verbosity.McpeItemStackResponse=1
+TracePackets.Verbosity.McpePlayerEnchantOptions=1
