--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -29,8 +29,8 @@ CalculateLights=false
 # Game mode and rules
 #GameMode=Survival
 GameMode=Creative
-Player.GameMode=Creative
-#Player.GameMode=Survival
+#Player.GameMode=Creative
+Player.GameMode=Survival
 CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=false
@@ -153,3 +153,5 @@ TracePackets.Verbosity.McpeLevelSoundEvent=1
 TracePackets.Verbosity.McpeItemStackRequest=1
 TracePackets.Verbosity.McpeItemStackResponse=1
 TracePackets.Verbosity.McpePlayerEnchantOptions=1
+TracePackets.Verbosity.McpeMobEquipment=1
+TracePackets.Verbosity.McpeInventorySlot=1
