--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -46,3 +46,4 @@ TracePackets.Verbosity.McpeUpdateEquipment=0
 TracePackets.Verbosity.McpeUpdateBlockSynced=0
 TracePackets.Verbosity.McpeSetEntityData=0
 TracePackets.Verbosity.McpeNetworkSettingsPacket=1
+TracePackets.Verbosity.McpeBiomeDefinitionList=0
