--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -29,8 +29,8 @@ CalculateLights=false
 # Game mode and rules
 #GameMode=Survival
 GameMode=Creative
-#Player.GameMode=Creative
-Player.GameMode=Survival
+Player.GameMode=Creative
+#Player.GameMode=Survival
 CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=false
