Fix falling blocks (gravel and sand).

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -111,10 +111,10 @@ PluginDirectory=../../../../TestPlugin/bin/{configuration}/netcoreapp3.1;../../.
 #PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-CommandsTest.Enabled=false
+#CommandsTest.Enabled=false
 SurvivalCraft.Enabled=false
 Plotter.Enabled=false
-BuilderBase.Enabled=false
+#BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
