Fix maps. Fix skins with verified settings.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -119,7 +119,7 @@ SurvivalCraft.Enabled=false
 Plotter.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
-Code4Fun.Enabled=false
+#Code4Fun.Enabled=false
 SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
