--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -21,8 +21,8 @@ WorldProvider=leveldb
 BDSPath=C:\Development\Other\bedrock-server-1.16.0.2
 BDSExe=bedrock_server.exe
 
-ViewDistance=20
-MaxViewDistance=15
+ViewDistance=15
+MaxViewDistance=10
 MoveRenderDistance=1
 CalculateLights=false
 #UseAlexChunks=true
@@ -45,7 +45,8 @@ GameRule.DoDaylightcycle=false
 #Profiler.Enabled=true
 
 #LevelDB TEST
-LevelDBWorldFolder={BDSPath}\worlds\BedrockGeneratedLevel
+#LevelDBWorldFolder={BDSPath}\worlds\BedrockGeneratedLevel
+LevelDBWorldFolder=C:\Temp\TrashBedrockWorld
 
 # Bad light worlds
 #PCWorldFolder=C:\Development\Worlds\SkyWarsBrokenLight\SkyWars
@@ -114,7 +115,7 @@ PluginDirectory=../../../../TestPlugin/bin/{configuration}/netcoreapp3.1;../../.
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 #CommandsTest.Enabled=false
-BuilderBase.Enabled=false
+#BuilderBase.Enabled=false
 SurvivalCraft.Enabled=false
 Plotter.Enabled=false
 Pets.Enabled=false
