Work on commands Work on LevelDB (now working with save)

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -46,7 +46,10 @@ GameRule.DoDaylightcycle=false
 
 #LevelDB TEST
 #LevelDBWorldFolder={BDSPath}\worlds\BedrockGeneratedLevel
-LevelDBWorldFolder=C:\Temp\TrashBedrockWorld
+#LevelDBWorldFolder=C:\Temp\TrashBedrockWorld
+LevelDBWorldFolder=C:\Temp\TestNewBedrockWorld
+Save.Enabled=true
+Save.Interval=30
 
 # Bad light worlds
 #PCWorldFolder=C:\Development\Worlds\SkyWarsBrokenLight\SkyWars
