Proper block picking. Messy as hell, but it works.

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -117,13 +117,13 @@ PluginDirectory=../../../../TestPlugin/bin/{configuration}/netcoreapp3.1;../../.
 #PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-#CommandsTest.Enabled=false
+CommandsTest.Enabled=false
 #BuilderBase.Enabled=false
 SurvivalCraft.Enabled=false
-Plotter.Enabled=false
+#Plotter.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
-#Code4Fun.Enabled=false
+Code4Fun.Enabled=false
 SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
