--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -21,7 +21,7 @@ WorldProvider=leveldb
 BDSPath=C:\Development\Other\bedrock-server-1.16.0.2
 BDSExe=bedrock_server.exe
 
-ViewDistance=15
+ViewDistance=18
 MaxViewDistance=10
 MoveRenderDistance=1
 CalculateLights=false
@@ -47,9 +47,10 @@ GameRule.DoDaylightcycle=false
 #LevelDB TEST
 #LevelDBWorldFolder={BDSPath}\worlds\BedrockGeneratedLevel
 #LevelDBWorldFolder=C:\Temp\TrashBedrockWorld
-LevelDBWorldFolder=C:\Temp\TestNewBedrockWorld
-Save.Enabled=true
-Save.Interval=30
+#LevelDBWorldFolder=C:\Temp\TestNewBedrockWorld
+LevelDBWorldFolder=C:\Development\Worlds\benchmark_mcworld
+#Save.Enabled=true
+#Save.Interval=30
 
 # Bad light worlds
 #PCWorldFolder=C:\Development\Worlds\SkyWarsBrokenLight\SkyWars
@@ -120,7 +121,7 @@ PluginDirectory=../../../../TestPlugin/bin/{configuration}/netcoreapp3.1;../../.
 CommandsTest.Enabled=false
 #BuilderBase.Enabled=false
 SurvivalCraft.Enabled=false
-#Plotter.Enabled=false
+Plotter.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
