Fix more blocks. Implement bonemeal on grass properly. Still have to do all the biomes (later).

--- a/src/MiNET/MiNET.Console/server.nicke.conf
+++ b/src/MiNET/MiNET.Console/server.nicke.conf
@@ -47,10 +47,10 @@ GameRule.DoDaylightcycle=false
 #LevelDB TEST
 #LevelDBWorldFolder={BDSPath}\worlds\BedrockGeneratedLevel
 #LevelDBWorldFolder=C:\Temp\TrashBedrockWorld
-#LevelDBWorldFolder=C:\Temp\TestNewBedrockWorld
-LevelDBWorldFolder=C:\Development\Worlds\benchmark_mcworld
-#Save.Enabled=true
-#Save.Interval=30
+LevelDBWorldFolder=C:\Temp\TestNewBedrockWorld
+#LevelDBWorldFolder=C:\Development\Worlds\benchmark_mcworld
+Save.Enabled=true
+Save.Interval=30
 
 # Bad light worlds
 #PCWorldFolder=C:\Development\Worlds\SkyWarsBrokenLight\SkyWars
@@ -121,7 +121,7 @@ PluginDirectory=../../../../TestPlugin/bin/{configuration}/netcoreapp3.1;../../.
 CommandsTest.Enabled=false
 #BuilderBase.Enabled=false
 SurvivalCraft.Enabled=false
-Plotter.Enabled=false
+#Plotter.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
