--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -57,6 +57,7 @@
 		<PackageReference Include="MiNET.astar" Version="1.0.14" />
 		<PackageReference Include="MiNET.fnbt" Version="1.0.22" />
 		<PackageReference Include="MiNET.LevelDB" Version="1.0.36" />
+		<PackageReference Include="Mono.Cecil" Version="0.11.3" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 		<PackageReference Include="Portable.BouncyCastle" Version="1.8.6.7" />
 		<PackageReference Include="SharpAvi" Version="2.1.2" />
