--- a/src/MiNET/MiNET.Console/MiNET.Console.csproj
+++ b/src/MiNET/MiNET.Console/MiNET.Console.csproj
@@ -25,6 +25,9 @@
     <Content Include="server.conf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="server.kenny.conf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="server.nicke.conf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
