--- a/src/MiNET/MiNET.BuilderBase/MiNET.BuilderBase.csproj
+++ b/src/MiNET/MiNET.BuilderBase/MiNET.BuilderBase.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\MiNET\MiNET.csproj" />
