--- a/src/MiNET/MiNET.ServiceKiller/MiNET.ServiceKiller.csproj
+++ b/src/MiNET/MiNET.ServiceKiller/MiNET.ServiceKiller.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
     <StartupObject>MiNET.ServiceKiller.Emulator</StartupObject>
