--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -43,6 +43,8 @@
     <EmbeddedResource Include="Blocks\canonical_block_states.nbt" />
     <None Remove="Blocks\block_id_map.json" />
     <EmbeddedResource Include="Blocks\block_id_map.json" />
+    <None Remove="Blocks\item_id_map.json" />
+    <EmbeddedResource Include="Blocks\item_id_map.json" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="jose-jwt" Version="3.0.0" />
