--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,8 +1,45 @@
 name: .NET Core
 
-on: [push]
+on: 
+  push:
+    branches:
+      - master
 
 jobs:
+  nuget:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 5.0.100
+
+      - name: Generate build number
+        id: buildnumber
+        uses: einaregilsson/build-number@v2 
+        with:
+          token: ${{secrets.github_token}}    
+        
+      - name: Dotnet Restore
+        working-directory: src/MiNET/MiNET
+        run: dotnet restore
+      
+      - name: Build & Pack
+        working-directory: src/MiNET/MiNET
+        run: |
+          export PKG_VERSION=1.0.${{ steps.buildnumber.outputs.build_number }}
+          dotnet pack -o ./nuget -p:PackageVersion="$PKG_VERSION" --include-symbols --include-source
+      
+      - name: Publish Artifacts
+        shell: bash
+        working-directory: src/MiNET/MiNET
+        run: |
+          for f in ./nuget/*.nupkg; do
+            until dotnet nuget push "$f" -s "https://api.nuget.org/v3/index.json" -k ${{ secrets.NUGET_KEY }} --skip-duplicate --no-symbols true; do echo "Retrying"; sleep 1; done
+          done
+    
   build:
 
     runs-on: windows-latest
@@ -13,6 +50,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.100
+        
     - name: Build with dotnet
       run: dotnet build --configuration Release
       working-directory: src/MiNET
