Update blockstate mapping, legacy blocks id + meta are now mapped correctly

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -45,6 +45,8 @@
     <EmbeddedResource Include="Blocks\block_id_map.json" />
     <None Remove="Blocks\item_id_map.json" />
     <EmbeddedResource Include="Blocks\item_id_map.json" />
+    <None Remove="Blocks\r12_to_current_block_map.bin" />
+    <EmbeddedResource Include="Blocks\r12_to_current_block_map.bin" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="jose-jwt" Version="3.1.1" />
