--- a/src/MiNET/MiNET.Client/MiNET.Client.csproj
+++ b/src/MiNET/MiNET.Client/MiNET.Client.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
-    <StartupObject>MiNET.Client.Startup</StartupObject>
+    <StartupObject></StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="log4net.xml" />
