--- a/src/MiNET/MiNET.Console/server.conf
+++ b/src/MiNET/MiNET.Console/server.conf
@@ -1,9 +1,9 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
-UseEncryption=false
-UseEncryptionForAll=false
-ForceOrderingForAll=false
-ForceXBLAuthentication=false
+#UseEncryption=false
+#UseEncryptionForAll=true
+#ForceOrderingForAll=false
+#ForceXBLAuthentication=false
 
 motd=MiNET Server
 motd-2nd=
@@ -12,7 +12,7 @@ port=19132
 ViewDistance=20
 MaxViewDistance=8
 MoveRenderDistance=1
-CalculateLights=false
+CalculateLights=true
 
 # Game mode and rules
 GameMode=Survival
@@ -37,7 +37,7 @@ EnableCommands=true
 PluginDirectory=../../../../TestPlugin/bin/Debug/net5.0;../../../../MiNET.BuilderBase/bin/Debug/netcoreapp2.1;../../../../MiNET.Plotter/bin/Debug/netcoreapp2.1
 
 #PluginDisabled=true
-NiceLobby.Enabled=true
+NiceLobby.Enabled=false
 CoreCommands.Enabled=false
 Plotter.Enabled=false
 SurvivalCraft.Enabled=false
