--- a/src/MiNET/MiNET.Console/server.conf
+++ b/src/MiNET/MiNET.Console/server.conf
@@ -17,7 +17,7 @@ CalculateLights=true
 # Game mode and rules
 GameMode=Survival
 #GameMode=Creative
-Player.GameMode=Creative
+Player.GameMode=Survival
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
