--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Publish Artifacts
         shell: bash
         working-directory: src/MiNET/MiNET
-        run: dotnet nuget push ./nuget/*.nupkg -s "https://api.nuget.org/v3/index.json" -k ${{ secrets.NUGET_KEY }} --skip-duplicate --no-symbols true
+        run: dotnet nuget push ./nuget/*.symbols.nupkg -s "https://api.nuget.org/v3/index.json" -k ${{ secrets.NUGET_KEY }} --skip-duplicate
